--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -1,3 +1,11 @@
 streamlit==1.28.0
 pandas==2.1.0
 numpy==1.24.0
+scikit-learn==1.3.0
+joblib==1.3.0
+matplotlib==3.7.0
+seaborn==0.12.2
+plotly==5.17.0
+pillow==10.0.0
+streamlit-extras==0.4.0
+streamlit-option-menu==0.3.6
