--- a/requirements.txt.txt
+++ b/requirements.txt.txt
@@ -6,6 +6,4 @@ joblib==1.3.0
 matplotlib==3.7.0
 seaborn==0.12.2
 plotly==5.17.0
-pillow==10.0.0
-streamlit-extras==0.4.0
-streamlit-option-menu==0.3.6
+Pillow==10.0.0
